# AgentSmith2018

Gazebo2018/: README.md  world.world
Gazebo2018/frc2018_cube/: model.config  model.sdf
Gazebo2018/frc2018_cube/meshes/: cube.mtl
Gazebo2018/frc2018_field/: model.config  model.sdf
Gazebo2018/frc2018_field/meshes/: field.mtl  field_centerstep_collision.mtl
Gazebo2018/frc2018_robot/: model.config  model.sdf
Neo/: README.md
Neo/calib/calib/: calib.ino
Neo/neo/: neo.ino
agent-smith/: .gitmodules  README.md  practice_robot_dims.md  remote-deploy.sh  startup.sh  vision.service
agent-smith-simulator/: README.md
agent-smith-simulator/agent-smith_control/: CMakeLists.txt  package.xml
agent-smith-simulator/agent-smith_control/config/: control.yaml
agent-smith-simulator/agent-smith_control/launch/: agent-smith-control.launch
agent-smith-simulator/agent-smith_description/: CMakeLists.txt  package.xml
agent-smith-simulator/agent-smith_description/urdf/: agent-smith.gazebo  agent-smith.urdf.xacro  imu.urdf.xacro  odom.urdf.xacro  rplidar-a2.urdf.xacro  wheel.urdf.xacro  zed.urdf.xacro
agent-smith-simulator/agent-smith_gazebo/: CMakeLists.txt  package.xml
agent-smith/socketcan_bridge_fixed/: CMakeLists.txt  package.xml
agent-smith/socketcan_bridge_fixed/src/: socketcan_bridge_node.cpp  socketcan_to_topic.cpp  topic_to_socketcan.cpp
agent-smith/xbot_behavior_agent/: CMakeLists.txt  package.xml
agent-smith/xbot_lidar/: CMakeLists.txt  package.xml
agent-smith/xbot_map/: CMakeLists.txt  package.xml
agent-smith/xbot_mode_manager/: CMakeLists.txt  package.xml
agent-smith/xbot_nav/: CMakeLists.txt  package.xml
agent-smith/xbot_obstacle_detector/: CMakeLists.txt  package.xml
agent-smith/xbot_odo/: CMakeLists.txt  package.xml
agent-smith/xbot_post_process_map/: package.xml
agent-smith/xbot_robot_comms/: CMakeLists.txt  package.xml
agent-smith/xbot_robot_slam/: package.xml
agent-smith/xbot_setup_tf/: CMakeLists.txt  package.xml
agent-smith/xbot_sim_comms/: CMakeLists.txt  package.xml
agent-smith/xbot_vision/: CMakeLists.txt  package.xml
xbot_data/: README.md
xbot_data/bags/: bag_2018-03-16-03-44-34.bag  bag_2018-03-16-03-44-36.bag  bag_2018-03-16-04-23-05.bag  bag_2018-03-16-04-24-28.bag
xbot_data/maps/: b99stairzone-edited.yaml  b99stairzone.yaml  fixed99.yaml  loading-hallway-expanded.yaml  lower_sim.yaml  new99.yaml  nrg-practice-expanded-edited.yaml  sim_hedit_map.yaml  sim_high_map.yaml
zed-agent-smith/: CMakeLists.txt
zed-agent-smith/cfg/: Zed.cfg
zed-agent-smith/src/: zed_wrapper_nodelet.cpp
(+87 files in other folders)
